--- a/Petter/app/src/main/res/layout/activity_message.xml
+++ b/Petter/app/src/main/res/layout/activity_message.xml
@@ -10,12 +10,12 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Owner: Frank"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,46 +23,77 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars[11]" />
 
 
-    -<ScrollView android:layout_height="316dp" android:layout_width="368dp" tools:layout_editor_absoluteY="191dp" tools:layout_editor_absoluteX="8dp" android:scrollbarStyle="outsideOverlay" android:fillViewport="true" android:clipToPadding="true">
+    -
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="368dp"
+        android:layout_height="316dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:clipToPadding="true"
+        android:fillViewport="true"
+        android:scrollbarStyle="outsideOverlay"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
 
-    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
+        -
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=" - Hello can I pet your dog tonight at ILC?" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Hey there! No problem we will be there at 7!" android:id="@+id/textView3" android:textColorLink="@color/colorPrimaryDark" android:textAppearance="@style/TextAppearance.AppCompat" android:baselineAligned="false"/>
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" - Hello can I pet your dog tonight at ILC?"
+                android:textColor="#764BA2" />
 
-    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text=" - Great! See you tonight!" android:id="@+id/textView2" android:baselineAligned="false"/>
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:text="-  Hey there! No problem, we will be there at 7!"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textColorLink="@color/colorPrimaryDark" />
 
-    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="..." android:id="@+id/textView6"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:text=" - Great! See you tonight!"
+                android:textColor="#764BA2" />
 
-    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="(Pinder, one step closer to a better world)" android:id="@+id/textView5"/>
+        </LinearLayout>
 
-    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="4:30pm" android:id="@+id/editText" android:baselineAligned="false" android:singleLine="true" android:inputType="time" android:ems="10"/>
-
-</LinearLayout>
-
-</ScrollView>
+    </ScrollView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="home"
         android:text="Home"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
